spacing-issue-resolved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #header.header-scrolled {
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.829);
 }
 
 #header .logo h1 {
@@ -116,7 +116,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo h1 a, #header .logo h1 a:hover {
-  color: #576971;
+  color: #181d1f;
+  font-size: 35px;
+  font: bold;
   text-decoration: none;
 }
 
@@ -138,7 +140,7 @@ h1, h2, h3, h4, h5, h6 {
 # Header Social Links
 --------------------------------------------------------------*/
 .header-social-links a {
-  color: #7b909a;
+  color: #182c36;
   padding: 12px 0 12px 6px;
   display: inline-block;
   line-height: 1px;
@@ -147,6 +149,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .header-social-links a:hover {
   color: #009cea;
+  
 }
 #header .header-social-links button[type="submit"] {
   background: #009cea;
@@ -479,17 +482,19 @@ margin-top: 180px;
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+ 
   overflow: hidden;
 }
 
 .section-bg {
-  background-color: #f7f8f9;
+  background-color: #FFFFFF;
 }
 
 .section-title {
+  font-weight: bold;
   text-align: center;
   padding-bottom: 30px;
+
 }
 
 .section-title h2 {
@@ -498,7 +503,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 0;
   font-family: "Poppins", sans-serif;
-  color: #627680;
+  color: #0d1316;
 }
 
 .section-title p {
@@ -514,9 +519,9 @@ section {
 }
 
 .about .container {
-  background-color: #fff;
-margin-top: 40px;
-  padding: 30px 50px;
+  background-color: transparent;
+margin-top: 100px;
+  padding-top: 80px;
 }
 
 @media (max-width: 992px) {
@@ -524,11 +529,27 @@ margin-top: 40px;
     padding: 30px;
   }
 }
+.about-pic {
+  width: 350px;
+  height: 550px;
+  
+  padding-right: 90px;
+ 
+
+}
+.about-pic :hover{
+  transition: transform .5s; 
+  transform: scale(1.25);
+}
+
+.about-pic img {
+  max-width: 120%;
+}
 
 .about .content h3 {
   font-weight: 400;
   font-size: 32px;
-  color: #364146;
+  color: #242c30;
   font-family: "Poppins", sans-serif;
 }
 
@@ -555,8 +576,10 @@ margin-top: 40px;
 # Features
 --------------------------------------------------------------*/
 .features {
+  padding-top: 50px;
   padding-bottom: 40px;
-  margin-top: 30px;
+  margin-top: 80px;
+  background-color: transparent;
 }
 
 .features .nav-tabs {
@@ -565,7 +588,7 @@ margin-top: 40px;
 
 .features .nav-link {
   border: 0;
-  padding: 20px;
+  padding-top: 20px;
   transition: 0.3s;
   color: #364146;
   transition: 0.3s ease-in-out;
@@ -577,7 +600,7 @@ margin-top: 40px;
   font-size: 18px;
   font-weight: 600;
   transition: 0.3s ease-in-out;
-  color: #576971;
+  color: #2c3538;
 }
 
 .features .nav-link p {
@@ -586,7 +609,9 @@ margin-top: 40px;
 }
 
 .features .nav-link:hover {
+  transition: transform .5s; 
   background: #fafbfb;
+  transform: scale(1.20);
 }
 
 .features .nav-link:hover h4 {
@@ -606,14 +631,13 @@ margin-top: 40px;
 }
 
 .features .tab-pane.active {
-  padding: 60px;
+ 
   -webkit-animation: slide-down 0.5s ease-out;
   animation: slide-down 0.5s ease-out;
 }
 
 .features .tab-content {
-  margin-left: 30px;
-  margin-top: 30px;
+ 
   text-align: right;
 }
 
@@ -1547,6 +1571,7 @@ iframe {
 .bg-contact100 {
   width: 100%;
   height: 80%;
+  margin-top: 90px;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -1570,7 +1595,7 @@ iframe {
 .wrap-contact100 {
   width: 1163px;
   background: #fff;
-  border-radius: 10px;
+  border-radius: 5px;
   overflow: hidden;
 height: 570px;
   display: -webkit-box;
@@ -1588,6 +1613,13 @@ height: 570px;
 .contact100-pic {
   width: 310px;
   padding-top: 55px;
+ 
+
+}
+.contact100-pic :hover{
+  transition: transform .5s; 
+  
+  transform: scale(1.10);
 }
 
 .contact100-pic img {
@@ -1614,17 +1646,17 @@ height: 570px;
 
 input.input100 {
   height: 50px;
-  border-radius: 15px;
+  border-radius: 8px;
   padding: 0 30px 0 50px;
 }
 
 input.input100[name="email"] {
-  padding: 0 30px 0 54px;
+  padding: 0 30px 0 50px;
 }
 
 textarea.input100 {
   min-height: 150px;
-  border-radius: 15px;
+  border-radius: 8px;
   padding: 14px 30px;
 }
 
